k8s/base/core/api/identity/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  labels:
    app: identity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service
          image: identity-api-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
