k8s/base/core/api/identity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  selector:
    app: identity-service
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
