k8s/base/core/api/identity/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: identity-allow-traefik
spec:
  podSelector:
    matchLabels:
      app: identity-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    - from:
        - podSelector:
            matchLabels:
              app: fleet-service
